Migrate to IDS infomodel 4.0.0